--- a/index.html
+++ b/index.html
@@ -50,12 +50,9 @@
 	</head>
 	<body>
 		<div class="container">
-			<div
-				class="card pulse"
-				style="background: rgba(255, 109, 74, 0.7); width: 18rem;"
-			>
+			<div class="card pulse bg-danger text-white" style="width: 18rem;">
 				<div class="card-body">
-					<h5 class="card-title text-center">PULSE</h5>
+					<h5 class="card-title text-center">DANGER!</h5>
 				</div>
 			</div>
 		</div>
